--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,10 @@
             android:label="@string/title_activity_menu__principal"
             android:theme="@style/AppTheme" />
         <activity android:name=".RegistroActivity"></activity>
+        <activity android:name=".Registro.Registro1"></activity>
+        <activity android:name=".Registro.Registro2"></activity>
+        <activity android:name=".Registro.Registro3"></activity>
+
     </application>
 
 </manifest>
