--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,13 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'com.soundcloud.android:android-crop:1.0.1@aar'
     compile 'com.google.code.gson:gson:2.3.1'
     compile 'com.squareup.okhttp3:okhttp:3.6.0'
-
+    compile 'com.google.android.gms:play-services:10.0.+'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+    testCompile 'junit:junit:4.12'
 }
