--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,15 +57,12 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
 
-
         <activity android:name=".Perfil" />
-
         <activity
             android:name=".SettingsActivity"
-            android:label="@string/title_activity_settings"></activity>
-
-        <activity android:name=".Mensajes"></activity>
-
+            android:label="@string/title_activity_settings" />
+        <activity android:name=".Mensajes" />
+        <activity android:name=".PuntuacionActivity"></activity>
     </application>
 
 </manifest>
