--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,8 @@ dependencies {
 
     compile 'com.android.support:recyclerview-v7:24.0.+'
     compile 'com.android.support:cardview-v7:24.0.+'
+
+    compile 'com.google.firebase:firebase-storage:9.6.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
